# comfy-pilot

./: .gitignore  CLAUDE.md  GROWTH.md  LAUNCH_DAY_SCRIPTS.md  MARKET_STRATEGY.md  PRE_LAUNCH_CHECKLIST.md  README.md  SKILLS_CONTRIBUTE.md  START_HERE.md  VIRAL_7DAY_BLITZ.md  WORLD_GIF_PRODUCTION.md  WORLD_GIF_STORYBOARD.md  WORLD_LAUNCH_COPY.md  WORLD_MARKETING_BLITZ.md  WORLD_STRATEGY_SUMMARY.md  __init__.py  mcp_server.py  pyproject.toml
analytics/: ducklake_init.sql  ducklake_queries.sql
comfy-skills/: README.md  pyproject.toml
comfy-skills/src/comfy_skills/: __init__.py  cli.py  flox.py  mlx.py  registry.py
deploy/modal/: README.md  comfyapp.py  comfyclient.py
js/: claude-code.js
skills/: README.md  SKILL_SPEC.md  skill-registry.json
skills/core/controlnet-canny/: README.md  skill.json  workflow.json
skills/core/flux-generation/: README.md  skill.json  workflow.json
skills/core/img2img/: README.md  skill.json  workflow.json
skills/core/inpainting/: README.md  skill.json  workflow.json
skills/core/sdxl-generation/: README.md  skill.json  workflow.json
skills/core/upscale-4x/: README.md  skill.json  workflow.json
skills/ecosystems/plurigrid-asi/: interleave-index.edn
skills/ecosystems/plurigrid-asi/belief-revision-vm/: skill.json
skills/ecosystems/plurigrid-asi/container-orchestration/: interleave.joke  skill.json
skills/ecosystems/plurigrid-asi/filesystem-intelligence/: interleave.joke  skill.json
skills/ecosystems/plurigrid-asi/metacircular-provider/: skill.json
skills/ecosystems/plurigrid-asi/shell-bridge/: skill.json
