[project]
name = "comfy-pilot"
description = "MCP server + embedded terminal that lets Claude Code see and edit your ComfyUI workflows"
version = "1.0.8"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/ConstantineB6/comfy-pilot"

[tool.comfy]
PublisherId = "constantine"
DisplayName = "Comfy Pilot"
Icon = "https://raw.githubusercontent.com/ConstantineB6/comfy-pilot/main/thumbnail.png"
