[project]
name = "comfy-skills"
version = "0.1.0"
description = "Deploy ComfyUI workflow skills at conversation speed"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Comfy Pilot Team" },
]
keywords = ["comfyui", "skills", "workflows", "ai", "stable-diffusion", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.25",
    "rich>=13.0",
]

[project.scripts]
skills = "comfy_skills.cli:entry"
comfy-skills = "comfy_skills.cli:entry"

[project.urls]
Homepage = "https://github.com/ConstantineB6/Comfy-Pilot"
Repository = "https://github.com/ConstantineB6/Comfy-Pilot"
Documentation = "https://github.com/ConstantineB6/Comfy-Pilot/tree/main/skills"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/comfy_skills"]
